# slcross

./: .gitmodules  CMakeLists.txt  README.md  common.hpp  cstring_from_view.hpp  hello.cpp  preprocessor.hpp  read_entire_file.hpp  slcross.cpp  slcross.cppm  slcross.hpp  test.slang  transpiler.cpp
cmake/: FetchArgParse.cmake  FetchDawn.cmake  FetchSlang.cmake  FetchTint.cmake  bundle.cmake
patches/: argparse.patch  slang-spirv-core-grammar-embed.cpp  slang.patch
